Add configuration system and fix TypeScript type errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chong Kok Yang</title>
+    <title>Personal Portfolio</title>
     <meta name="description" content="Process Engineer specializing in Machine Learning & Data Analytics. NTU Chemical Engineering Year 4 student with expertise in process optimization and semiconductor manufacturing.">
     <meta name="author" content="Chong Kok Yang">
     <link rel="preconnect" href="https://fonts.googleapis.com">
